--- a/index.html
+++ b/index.html
@@ -9,7 +9,13 @@
   <meta name="keywords" content="keywords,here">
   <link rel="stylesheet" href="styles.css" type="text/css">
   </head>
-  <body>
+  <body><div class = "content-container">  
+    <h1>
+      this is my fist tittle page!!
+    </h1>
+    <p>
+      The most exciting thing about learning at code to the dream. will be learning new technology and meeting new people.also stating a new job path.
+    </p></div>
   <div id="target-div"></div>
   <script src="index.js" type="text/javascript"></script>
   </body>
