--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       this is my fist tittle page!!
     </h1>
     <p>
-      The most exciting thing about learning at code to the dream. will be learning new technology and meeting new people.also stating a new job path.
+      The most exciting thing about learning at code to the dream. will be learning new technology and meeting new people.Creating new Projects while starting a new career path.
     </p></div>
   <div id="target-div"></div>
   <script src="index.js" type="text/javascript"></script>
