Made changes to code lessson1

--- a/index.html
+++ b/index.html
@@ -9,14 +9,16 @@
   <meta name="keywords" content="keywords,here">
   <link rel="stylesheet" href="styles.css" type="text/css">
   </head>
-  <body><div class = "content-container">  
+  <body>
+    <div class = "content-container">  
     <h1>
-      this is my fist tittle page!!
+      This is my fist tittle page!!
     </h1>
-    <p>
-      The most exciting thing about learning at code to the dream. will be learning new technology and meeting new people.also stating a new job path.
-    </p></div>
-  <div id="target-div"></div>
-  <script src="index.js" type="text/javascript"></script>
+      <p>The most exciting thing about learning to code at code to the dream will be learning new technology.</P> 
+      <p>While making websites and meeting new people from all walks of life.</p>
+      <p>Also, gaining skills which could lead to starting a new job path as a front end developer!!.</p>
+    </div>
+    <div id="target-div"></div>
+    <script src="index.js" type="text/javascript"></script>
   </body>
 </html>
